modify the class of base64